--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,97 @@
 body {
-	width: 100%;
-	height: 100%;
-	background-color: white;
-  }
+  width: 100%;
+  height: 100%;
+  background-color: black;
+}
 
-  #watchface {
-	position: absolute;
-	width: 360px;
-	height: 360px;
-	top: 0px;
-	left: 0px;
-	background-size: 100%;
-	background-repeat: no-repeat;
-	overflow: hidden;
-	color: white;
-	background-color: black;
-	line-height: 1.0;
-  }
+#watchface {
+  position: absolute;
+  width: 360px;
+  height: 360px;
+  top: 0px;
+  left: 0px;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  color: white;
+  /* background-color: black; */
+  line-height: 1.0;
 
-  .major {
-	color: yellow;
-  }
+  /* 워치페이스 가이드라인 */
+  /*
+  border:1px solid red;    
+  border-radius:50%;
+  -moz-border-radius:50%;
+  -webkit-border-radius:50%;
+  */
+}
 
-  .minor {
-	color: gray;
-  }
+.major {
+  color: yellow;
+}
 
-  #time {
-	position: absolute;
-	width: 80%;
-	height: 70%;
-	top: 10%;
-	left: 10%;
-	/* border: 3px solid green; */
-  }
+.minor {
+  color: gray;
+}
 
-  #h-str {
-	font-size: 550%;
-	float: left;
-	/* border: 2px solid yellow; */
-  }
+#time {
+  position: absolute;
+  width: 80%;
+  height: 70%;
+  top: 10%;
+  left: 10%;
+  visibility: visible;
+  /* border: 3px solid green; */
+}
 
-  #h-suffix {
-	font-size: 250%;
-	float: left;
-	padding-top: 15%;
-  }
+#time-full {
+  position: absolute;
+  width: 80%;
+  height: 70%;
+  top: 30%;
+  left: 10%;
+  text-align: center;
+  visibility: hidden;
+  font-size: 900%;
+}
 
-  #m-str {
-	font-size: 550%;
-	float: left;
-  }
+#h-str {
+  font-size: 550%;
+  float: left;
+  /* border: 2px solid yellow; */
+}
 
-  #m-suffix {
-	font-size: 250%;
-	float: left;
-	padding-top: 15%;
-  }
+#h-suffix {
+  font-size: 250%;
+  float: left;
+  padding-top: 15%;
+}
 
-  #ampm-str {
-	font-size: 200%;
-	/* border: 3px solid red; */
-  }
+#m-str {
+  font-size: 550%;
+  float: left;
+}
 
-  #date-str {
-	position: absolute;
-	height: 15%;
-	width: 85%;
-	top: 75%;
-	/* padding: auto; */
-	/* border: 3px solid red; */
-	left: 10%;
-	font-size: 200%;
-	float: left;
-  }
+#m-suffix {
+  font-size: 250%;
+  float: left;
+  padding-top: 15%;
+}
+
+#ampm-str {
+  font-size: 200%;
+  text-align: center;
+  /* border: 3px solid red; */
+}
+
+#date-str {
+  position: absolute;
+  height: 15%;
+  width: 100%;
+  top: 75%;
+  /* border: 3px solid red; */
+  /* left: 10%; */
+  font-size: 180%;
+  text-align: center;
+  margin: auto;
+}
