--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ body {
   width: 100%;
   height: 100%;
   background-color: black;
+  z-index: 10;
+}
+
+svg {
+  z-index: 20;
 }
 
 #watchface {
@@ -34,13 +39,22 @@ body {
   color: gray;
 }
 
+#ampm-str {
+  position: absolute;
+  top: 10%;
+  width: 100%;
+  text-align: center;
+  font-size: 200%;
+}
+
 #time {
   position: absolute;
   width: 80%;
   height: 70%;
-  top: 10%;
+  top: 20%;
   left: 10%;
   visibility: visible;
+  text-align: center;
   /* border: 3px solid green; */
 }
 
@@ -56,39 +70,30 @@ body {
 }
 
 #h-str {
-  font-size: 550%;
-  float: left;
+  font-size: 650%;
   /* border: 2px solid yellow; */
 }
 
 #h-suffix {
   font-size: 250%;
-  float: left;
   padding-top: 15%;
 }
 
 #m-str {
   font-size: 550%;
-  float: left;
+
 }
 
 #m-suffix {
   font-size: 250%;
-  float: left;
   padding-top: 15%;
-}
-
-#ampm-str {
-  font-size: 200%;
-  text-align: center;
-  /* border: 3px solid red; */
 }
 
 #date-str {
   position: absolute;
   height: 15%;
   width: 100%;
-  top: 75%;
+  top: 80%;
   /* border: 3px solid red; */
   /* left: 10%; */
   font-size: 180%;
