remove raster size in css

--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ svg {
 
 #watchface {
   position: absolute;
-  width: 360px;
-  height: 360px;
+  width: 100%;
+  height: 100%;
   top: 0px;
   left: 0px;
   background-size: 100%;
